fixes: -issue viewing dir with whitespace in path -filelist rendering after update -styles

--- a/app/screens/Videos/styles.scss
+++ b/app/screens/Videos/styles.scss
@@ -63,9 +63,11 @@
       .up-dir-button {
         background-color: #43536b;
         border: none;
+        bottom: 0;
         color: white;
         margin-right: 10px;
         padding: 20px;
+        position: absolute;
         width: 100%;
 
         &:active {
@@ -96,7 +98,7 @@
     list-style: none;
     overflow-x: hidden;
     overflow-y: scroll;
-    padding-bottom: 48px;
+    padding-bottom: 70px;
     position: absolute;
     width: 100%;
 
